# clash-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py
src/: cli.rs  main.rs
src/clash/: api.rs
src/commands/: check.rs  config.rs  dashboard.rs  install.rs  mod.rs  node.rs  policy.rs  proxy.rs  status.rs  tun.rs
src/mihomo/: api.rs
src/utils/: download.rs  mod.rs  system.rs
