[package]
name = "clash-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dialoguer = "0.11"
console = "0.15"
directories = "5.0"
flate2 = "1.0"
tar = "0.4"
tempfile = "3.8"
colored = "2.0"
once_cell = "1.18"
futures-util = "0.3" # for stream handling
indicatif = "0.17" # for progress bar
urlencoding = "2.1.3"
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
